@@ -109,7 +109,14 @@ public class UserRootImpl extends AbstractRootVertex<User> implements UserRoot {
 
 	@Override
 	public MeshAuthUser findMeshAuthUserByUuid(String userUuid) {
-		return findByUuid(userUuid).reframeExplicit(MeshAuthUserImpl.class);
+		// Load the user vertex directly via the index - This way no record loading will occur.
+		MeshVertexImpl t = database().index().checkIndexUniqueness(MeshVertexImpl.class.getSimpleName(), MeshVertexImpl.class, userUuid);
+		if (t != null) {
+			// Note: The found user will be directly re-framed and returned. No check will be performed to verify that the found element is a user or assigned to the user root.
+			// This method will only be used when loading the user via the uuid which was loaded from an immutable JWT. We thus can avoid this check to increase performance.
+			return t.reframeExplicit(MeshAuthUserImpl.class);
+		}
+		return null;
 	}
 
 	@Override
